--- a/index.html
+++ b/index.html
@@ -13,26 +13,37 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>Círculo de Fogo</h1>
+            <p>#Pacific Rim</p>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=KNczQYyCjwfA_X6I"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-</section>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=mqeBEtLg7YA"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
 
-<section class="categoria">
-    <div class="categoria-subtitulo">
-        <h2>Filmes e Séries</h2>
-        <button id="toggle-button">Mostrar/Esconder Filmes</button>
-    </div>
-    <div class="categoria-filmes">
-        <a href=""
-</head>
-    
+    <section class="categoria">
+        <div class="categoria-subtitulo">
+            <h2>Filmes e Séries</h2>
+            <button id="toggle-button">Mostrar/Esconder Filmes</button>
+        </div>
+        <div class="categoria-filmes">
+            <a href="https://www.youtube.com/watch?v=9ok9k9eO9PU">
+                <img src="https://img.youtube.com/vi/9ok9k9eO9PU/maxresdefault.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=3O38iURNG4c">
+                <img src="https://img.youtube.com/vi/3O38iURNG4c/maxresdefault.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=Dy4MMEuXYKg">
+                <img src="https://img.youtube.com/vi/Dy4MMEuXYKg/maxresdefault.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=1NIRX5d28nk">
+                <img src="https://img.youtube.com/vi/1NIRX5d28nk/maxresdefault.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=CFmf1bnS-jk">
+                <img src="https://img.youtube.com/vi/CFmf1bnS-jk/maxresdefault.jpg" alt=""></a>
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
+
 </html>
